--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/wwwroot/index.html
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/wwwroot/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ab4d.SharpEngine.Samples.Web</title>
+    <title>Ab4d.SharpEngine.Samples.BlazorWebAssembly</title>
     <base href="/" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="Ab4d.SharpEngine.Samples.Web.styles.css" rel="stylesheet" />
+    <link href="Ab4d.SharpEngine.Samples.BlazorWebAssembly.styles.css" rel="stylesheet" />
     <link href="manifest.webmanifest" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
