--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/wwwroot/index.html
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/wwwroot/index.html
@@ -11,8 +11,7 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="Ab4d.SharpEngine.Samples.BlazorWebAssembly.styles.css" rel="stylesheet" />
     <link href="manifest.webmanifest" rel="manifest" />
-    <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
-    <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
+    <link rel="apple-touch-icon" sizes="256x256" href="ab4d-logo-256.png" />
 </head>
 
 <body>
