Improved NoBlazor solution. Added and improved readme text

--- a/Ab4d.SharpEngine.Samples.AspNetCoreApp/wwwroot/index.html
+++ b/Ab4d.SharpEngine.Samples.AspNetCoreApp/wwwroot/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 
-    <h2>Ab4d.SharpEngine browser demo without using a Blazor</h2>
+    <h2>Ab4d.SharpEngine browser demo without using Blazor</h2>
 
     <p>This sample is showing how to show 3D graphics by using Ab4d.SharpEngine library in a simple HTML and JavaScript based web page.</p>
 
