--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/wwwroot/index.html
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/wwwroot/index.html
@@ -15,10 +15,17 @@
 </head>
 
 <body>
+    <style>
+        html, body, #app {
+            height: 100%;
+            margin: 0;
+        }
+    </style>
+
     <div id="app">
         <svg class="loading-progress">
-            <circle r="40%" cx="50%" cy="50%" />
-            <circle r="40%" cx="50%" cy="50%" />
+            <circle r="40%" cx="50%" cy="50%"/>
+            <circle r="40%" cx="50%" cy="50%"/>
         </svg>
         <div class="loading-progress-text"></div>
     </div>
