Improved .Net error message

--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/wwwroot/index.html
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/wwwroot/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <div id="blazor-error-ui">
-        An unhandled error has occurred.
+        An unhandled error has occurred. Check console logs in Development Tools for more info.
         <a href="." class="reload">Reload</a>
         <span class="dismiss">🗙</span>
     </div>
